--- a/src/client/src/app/components/tasks/tasks.component.html
+++ b/src/client/src/app/components/tasks/tasks.component.html
@@ -1,5 +1,4 @@
-<div class="card m-3">
-  <div class="card-body">
+
     <form (submit)="addTask($event)">
       <div class="input-group">
           <input type="text" [(ngModel)]="title" name="title" class="form-control" placeholder="Add A Task">
@@ -10,8 +9,7 @@
           </span>
       </div>
       </form>
-  </div>
-</div>
+
 
 <table class="table text-center table-hover">
   <thead>
@@ -28,7 +26,16 @@
       </td>
       <td>{{ task.title }}</td>
       <td>
-        <button class="btn btn-danger" (click)="deleteTask(task._id)">
+        <swal
+          #deleteSwal
+          title="Delete {{ task.title }}?"
+          text="Swal confirm"
+          type="warning"
+          [showCancelButton]="true"
+          [focusCancel]="true"
+          (confirm)="deleteTask(task._id)">
+        </swal>
+        <button class="btn btn-danger" (click)="deleteSwal.show()">
           <i class="fa fa-trash"></i>
         </button>
       </td>
