--- a/src/client/src/app/app.component.html
+++ b/src/client/src/app/app.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #E6E6E6;">
-  <a class="navbar-brand" routerLink="/">Home Tasks</a>
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
      <span class="navbar-toggler-icon"></span>
    </button>
+<a class="navbar-brand" routerLink="/">Home Tasks</a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link" *ngIf="!auth.isLoggedIn()" routerLink="/login">Sign in</a>
       <a class="nav-item nav-link" *ngIf="auth.isLoggedIn()" routerLink="/profile"><fa name="user"></fa> {{ auth.getUserDetails()?.name }}</a>
-
-</div>
+    </div>
     <div class="navbar-nav ml-auto">
       <!-- <a class="nav-item nav-link" *ngIf="auth.isLoggedIn()" (click)="auth.logout()"><fa name="sign-out"></fa>Logout</a> -->
       <a class="nav-item nav-link" *ngIf="auth.isLoggedIn()" (click)="auth.logout()"><fa name="sign-out"></fa>Logout</a>
