--- a/src/client/src/app/app.component.html
+++ b/src/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #E6E6E6;">
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
      <span class="navbar-toggler-icon"></span>
    </button>
 <a class="navbar-brand" routerLink="/">Home Tasks</a>
