add mining component
add mining component back and front

--- a/src/client/src/app/components/profile/profile.component.html
+++ b/src/client/src/app/components/profile/profile.component.html
@@ -7,13 +7,18 @@
 
       <div class="form-horizontal">
         <div class="form-group">
-          <p class="form-control-static"><fa name="user"></fa> {{ details?.name }} - <fa name="envelope"></fa> {{ details?.email }}</p>
+          <p class="form-control-static">
+            <fa name="user"></fa>
+              {{ details?.name }} -
+            <fa name="envelope"></fa>
+            {{ details?.email }}
+          </p>
           <p class="form-control-static"></p>
         </div>
       </div>
 
 
-
+      <app-minings></app-minings>
       <app-tasks></app-tasks>
 
 
