--- a/src/client/src/app/components/tasks/tasks.component.html
+++ b/src/client/src/app/components/tasks/tasks.component.html
@@ -1,4 +1,6 @@
-
+<div class="card">
+  <div class="card-body">
+    <h4 class="mb-3">Vista Task</h4>
     <form (submit)="addTask($event)">
       <div class="input-group">
           <input type="text" [(ngModel)]="title" name="title" class="form-control" placeholder="Add A Task">
@@ -42,3 +44,6 @@
     </tr>
   </tbody>
 </table>
+
+</div>
+</div>
