--- a/src/client/src/app/components/home/home.component.html
+++ b/src/client/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
 
   <h1>Hello there</h1>
 
-  <p>Won't you please <a routerLink="/login">sign in</a> or <a routerLink="/register">register</a>?</p>
-
+  <p>Won't you please </p>
+  <!-- <p>Won't you please <a routerLink="/login">sign in</a></p> -->
 </div>
 </div>
