--- a/src/client/src/app/components/login/login.component.html
+++ b/src/client/src/app/components/login/login.component.html
@@ -4,8 +4,8 @@
 
 
       <h1 class="form-signin-heading">Sign in</h1>
-      <p class="lead">Not a member? Please <a routerLink="/register">register</a> instead.</p>
-
+      <p class="lead">Not a member? Please instead.</p>
+      <!-- <p class="lead">Not a member? Please <a routerLink="/register">register</a> instead.</p> -->
       <form (submit)="login()">
         <div class="form-group">
           <label for="email">Email address</label>
