--- a/src/client/src/app/components/profile/profile.component.html
+++ b/src/client/src/app/components/profile/profile.component.html
@@ -13,6 +13,49 @@
             <fa name="envelope"></fa>
             {{ details?.email }}
           </p>
+          <button type="button" class="btn btn-success" routerLink="/register" data-toggle="modal" data-target="#exampleModal">
+
+            <i class="fa fa-user-plus"></i>
+            <a >register user</a>
+          </button>
+            <!-- modal -->
+          <!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">  <h1>Register</h1></h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+
+                  <p class="lead">Already a member? Please  instead.</p>
+                  <form (submit)="register()">
+                    <div class="form-group">
+                      <label for="name">Full name</label>
+                      <input type="text" class="form-control" name="name" placeholder="Enter your name" [(ngModel)]="credentials.name">
+                    </div>
+                    <div class="form-group">
+                      <label for="email">Email address</label>
+                      <input type="email" class="form-control" name="email" placeholder="Enter email" [(ngModel)]="credentials.email">
+                    </div>
+                    <div class="form-group">
+                      <label for="password">Password</label>
+                      <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="credentials.password">
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-primary">Register!</button>
+                    </div>
+                  </form>
+
+                </div>
+
+              </div>
+            </div>
+          </div> -->
+          <!-- fin modal -->
           <p class="form-control-static"></p>
         </div>
       </div>
